# NamedPipeClientServer

./: README.md
Client/ConsoleApplication2/: ConsoleApplication2.sln
Client/ConsoleApplication2/ConsoleApplication2/: ClientMain.cpp  ConsoleApplication2.vcxproj  ConsoleApplication2.vcxproj.filters  Utils.h
Client/ConsoleApplication2/ConsoleApplication2/Debug/: ConsoleApplication2.pch  vc141.idb
Client/ConsoleApplication2/ConsoleApplication2/Debug/ConsoleA.D07ADB2B.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ConsoleApplication2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Client/ConsoleApplication2/Debug/: ConsoleApplication2.ilk
Server/server_pipe/: CMakeLists.txt
Server/server_pipe/server_pipe/: AsyncServer.cpp  AsyncServer.h  Blocking_Queue.h  CMakeLists.txt  CustomClass.cpp  MathOperations.cpp  MathOperations.h  ServerPipe.cpp  StringOperations.cpp  StringOperations.h  SyncServer.cpp  SyncServer.h  Utils.h
